--- a/src/pages/donate.astro
+++ b/src/pages/donate.astro
@@ -1,20 +1,8 @@
 ---
 import BaseLayout from "@layouts/BaseLayout.astro";
+import { DonatePage } from "@components/pages";
 ---
 
 <BaseLayout title="Donate">
-  <article>
-    <header>
-      <h1>Donate Now!</h1>
-    </header>
-
-    <section>
-      <p>Your donation helps us continue our work defunding fossil fuels.</p>
-      <p>Bank.Green is a 501(c)(3) nonprofit. Donations are tax-deductible.</p>
-    </section>
-
-    <section>
-      <!-- Donation widget/form will be embedded here -->
-    </section>
-  </article>
+  <DonatePage client:load />
 </BaseLayout>
