--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -1,6 +1,7 @@
 ---
 import BaseLayout from "@layouts/BaseLayout.astro";
 import { getByUIDSafe, getAllByTypeSafe } from "@lib/prismic";
+import { BlogPostPage } from "@components/pages";
 
 export async function getStaticPaths() {
   const posts = await getAllByTypeSafe("blogpost");
@@ -8,7 +9,6 @@ export async function getStaticPaths() {
 }
 
 const { slug } = Astro.params;
-
 const post = await getByUIDSafe("blogpost", slug as string);
 
 if (!post) {
@@ -19,25 +19,5 @@ const title = post.data.title || "Blog Post";
 ---
 
 <BaseLayout title={title}>
-  <article>
-    <header>
-      {/* Featured image */}
-      <h1>{title}</h1>
-      <time datetime={post.first_publication_date}>
-        {new Date(post.first_publication_date || "").toLocaleDateString()}
-      </time>
-      {/* Author if available */}
-    </header>
-
-    <section>
-      {/* SliceZone content from post.data.slices */}
-    </section>
-
-    <footer>
-      <section>
-        <h2>Start to Bank Green Today</h2>
-        {/* Newsletter signup or action buttons */}
-      </section>
-    </footer>
-  </article>
+  <BlogPostPage post={post} client:load />
 </BaseLayout>
