--- a/src/pages/embrace.astro
+++ b/src/pages/embrace.astro
@@ -1,18 +1,11 @@
 ---
 import BaseLayout from "@layouts/BaseLayout.astro";
 import { getSingleSafe } from "@lib/prismic";
+import { SlicePage } from "@components/pages";
 
 const page = await getSingleSafe("embracepage");
 ---
 
 <BaseLayout title="Embrace">
-  <article>
-    <header>
-      <h1>Embrace</h1>
-    </header>
-
-    <section>
-      <!-- SliceZone content from page?.data?.slices -->
-    </section>
-  </article>
+  <SlicePage title="Embrace" page={page} client:load />
 </BaseLayout>
