--- a/src/pages/join.astro
+++ b/src/pages/join.astro
@@ -1,15 +1,8 @@
 ---
 import BaseLayout from "@layouts/BaseLayout.astro";
+import { JoinPage } from "@components/pages";
 ---
 
 <BaseLayout title="Join the Money Movement">
-  <article>
-    <header>
-      <h1>Join the Money Movement</h1>
-    </header>
-
-    <section>
-      <!-- Newsletter/pledge signup form -->
-    </section>
-  </article>
+  <JoinPage client:load />
 </BaseLayout>
