--- a/src/pages/one-pager-simple.astro
+++ b/src/pages/one-pager-simple.astro
@@ -1,12 +1,11 @@
 ---
 import BaseLayout from "@layouts/BaseLayout.astro";
 import { getSingleSafe } from "@lib/prismic";
+import { SlicePage } from "@components/pages";
 
 const page = await getSingleSafe("onepagersimple");
 ---
 
 <BaseLayout title="One Pager">
-  <article>
-    <!-- SliceZone content from page?.data?.slices -->
-  </article>
+  <SlicePage title="One Pager" page={page} client:load />
 </BaseLayout>
