--- a/src/pages/partners.astro
+++ b/src/pages/partners.astro
@@ -1,32 +1,11 @@
 ---
 import BaseLayout from "@layouts/BaseLayout.astro";
 import { getSingleSafe } from "@lib/prismic";
+import { PartnersPage } from "@components/pages";
 
 const page = await getSingleSafe("partnerspage");
 ---
 
 <BaseLayout title="Our Partners">
-  <article>
-    <header>
-      <h1>Our Partners</h1>
-    </header>
-
-    <section>
-      <p>Below is a list of our amazing partners who share our mission.</p>
-    </section>
-
-    <section>
-      <ul>
-        <!-- Partner logos/links from Prismic or hardcoded -->
-        <li><a href="https://www.banktrack.org/" rel="noopener" target="_blank">BankTrack</a></li>
-        <li><a href="https://reclaimfinance.org/" rel="noopener" target="_blank">Reclaim Finance</a></li>
-        <li><a href="https://rebellion.global/" rel="noopener" target="_blank">Extinction Rebellion</a></li>
-        <!-- Additional partners -->
-      </ul>
-    </section>
-
-    <section>
-      <!-- Newsletter signup form -->
-    </section>
-  </article>
+  <PartnersPage page={page} client:load />
 </BaseLayout>
