--- a/src/pages/green-policy-evaluator.astro
+++ b/src/pages/green-policy-evaluator.astro
@@ -3,7 +3,7 @@ import BaseLayout from "@layouts/BaseLayout.astro";
 import { getSingleSafe } from "@lib/prismic";
 import { SlicePage } from "@components/pages";
 
-const page = await getSingleSafe("greenpolicyevaluator");
+const page = await getSingleSafe("greenpolicyevaluatorpage");
 ---
 
 <BaseLayout title="Green Policy Evaluator">
