--- a/src/pages/methodology.astro
+++ b/src/pages/methodology.astro
@@ -3,7 +3,7 @@ import BaseLayout from "@layouts/BaseLayout.astro";
 import { getSingleSafe } from "@lib/prismic";
 import { SlicePage } from "@components/pages";
 
-const page = await getSingleSafe("methodologypage");
+const page = await getSingleSafe("methodology");
 ---
 
 <BaseLayout title="Ratings Methodology">
