--- a/src/pages/one-pager-simple.astro
+++ b/src/pages/one-pager-simple.astro
@@ -3,7 +3,7 @@ import BaseLayout from "@layouts/BaseLayout.astro";
 import { getSingleSafe } from "@lib/prismic";
 import { SlicePage } from "@components/pages";
 
-const page = await getSingleSafe("onepagersimple");
+const page = await getSingleSafe("onepagersimplepage");
 ---
 
 <BaseLayout title="One Pager">
