--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,8 +1,11 @@
 ---
 import BaseLayout from "@layouts/BaseLayout.astro";
+import { getSingleSafe } from "@lib/prismic";
 import { ContactPage } from "@components/pages";
+
+const page = await getSingleSafe("contactpage");
 ---
 
 <BaseLayout title="Contact Us">
-  <ContactPage client:load />
+  <ContactPage page={page} client:load />
 </BaseLayout>
