--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,8 +1,11 @@
 ---
 import BaseLayout from "@layouts/BaseLayout.astro";
+import { getSingleSafe } from "@lib/prismic";
 import { NotFoundPage } from "@components/pages";
+
+const page = await getSingleSafe("notfoundpage");
 ---
 
 <BaseLayout title="Page Not Found">
-  <NotFoundPage client:load />
+  <NotFoundPage page={page} client:load />
 </BaseLayout>
