--- a/src/pages/not-listed.astro
+++ b/src/pages/not-listed.astro
@@ -1,8 +1,11 @@
 ---
 import BaseLayout from "@layouts/BaseLayout.astro";
+import { getSingleSafe } from "@lib/prismic";
 import { NotListedPage } from "@components/pages";
+
+const page = await getSingleSafe("notlistedpage");
 ---
 
 <BaseLayout title="Bank Not Listed">
-  <NotListedPage client:load />
+  <NotListedPage page={page} client:load />
 </BaseLayout>
