--- a/src/pages/sustainable-eco-banks/[bankTag].astro
+++ b/src/pages/sustainable-eco-banks/[bankTag].astro
@@ -2,6 +2,11 @@
 import BaseLayout from "@layouts/BaseLayout.astro";
 import { BankProfilePage } from "@components/pages";
 
+interface BankData {
+  tag: string;
+  name: string;
+}
+
 export async function getStaticPaths() {
   // TODO: Fetch all sustainable banks from GraphQL
   // const data = await graphqlFetch(`query { sustainableBanks { tag } }`);
@@ -12,9 +17,10 @@ export async function getStaticPaths() {
 const { bankTag } = Astro.params;
 
 // TODO: Fetch bank data from GraphQL
-const bank = null;
+const bank: BankData | null = null;
 
-const title = bank ? `${bank.name} Review` : "Bank Review";
+const bankName = (bank as BankData | null)?.name ?? "Bank";
+const title = `${bankName} Review`;
 ---
 
 <BaseLayout title={title}>
