--- a/src/pages/not-listed.astro
+++ b/src/pages/not-listed.astro
@@ -1,9 +1,9 @@
 ---
 import BaseLayout from "@layouts/BaseLayout.astro";
-import { getSingleSafe } from "@lib/prismic";
+import { getByUIDSafe } from "@lib/prismic";
 import { NotListedPage } from "@components/pages";
 
-const page = await getSingleSafe("notlistedpage");
+const page = await getByUIDSafe("textonlypages", "notlisted");
 ---
 
 <BaseLayout title="Bank Not Listed">
