Added Mantine wrapper with theme

--- a/src/pages/accreditation/[slug].astro
+++ b/src/pages/accreditation/[slug].astro
@@ -19,5 +19,5 @@ const title = page.data.hero_title || "Accreditation";
 ---
 
 <BaseLayout title={title}>
-  <SlicePage title={title} page={page} client:load />
+  <SlicePage title={title} page={page} />
 </BaseLayout>
