--- a/src/pages/banks/[bankTag].astro
+++ b/src/pages/banks/[bankTag].astro
@@ -25,5 +25,5 @@ const title = `${bankName}'s Climate Score`;
 ---
 
 <BaseLayout title={title}>
-  <BankScorePage bank={bank} client:load />
+  <BankScorePage bank={bank} />
 </BaseLayout>
