--- a/src/pages/disclaimer.astro
+++ b/src/pages/disclaimer.astro
@@ -7,5 +7,5 @@ const page = await getSingleSafe("disclaimerpage");
 ---
 
 <BaseLayout title="Disclaimer">
-  <SlicePage title="Disclaimer" page={page} client:load />
+  <SlicePage title="Disclaimer" page={page} />
 </BaseLayout>
