--- a/src/pages/faq.astro
+++ b/src/pages/faq.astro
@@ -9,5 +9,5 @@ const page = await getSingleSafe("faqpage", {
 ---
 
 <BaseLayout title="Frequently Asked Questions">
-  <FaqPage page={page} client:load />
+  <FaqPage page={page} />
 </BaseLayout>
