--- a/src/pages/green-banking-guide.astro
+++ b/src/pages/green-banking-guide.astro
@@ -8,5 +8,5 @@ const page = await getSingleSafe("onepagersimplepage");
 ---
 
 <BaseLayout title="Green Banking Guide">
-  <SlicePage title="Green Banking Guide" page={page} client:load />
+  <SlicePage title="Green Banking Guide" page={page} />
 </BaseLayout>
