--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,5 +8,5 @@ const title = page?.data?.title || "Find Ethical & Sustainable Banks In Your Are
 ---
 
 <BaseLayout title={title}>
-  <HomePage page={page} client:load />
+  <HomePage page={page} />
 </BaseLayout>
