--- a/src/pages/methodology.astro
+++ b/src/pages/methodology.astro
@@ -7,5 +7,5 @@ const page = await getSingleSafe("methodology");
 ---
 
 <BaseLayout title="Ratings Methodology">
-  <SlicePage title="How Bank.Green Rates Institutions" page={page} client:load />
+  <SlicePage title="How Bank.Green Rates Institutions" page={page} />
 </BaseLayout>
