--- a/src/pages/partners.astro
+++ b/src/pages/partners.astro
@@ -7,5 +7,5 @@ const page = await getSingleSafe("partnerspage");
 ---
 
 <BaseLayout title="Our Partners">
-  <PartnersPage page={page} client:load />
+  <PartnersPage page={page} />
 </BaseLayout>
