--- a/src/pages/press/index.astro
+++ b/src/pages/press/index.astro
@@ -10,5 +10,5 @@ const releases = await getAllByTypeSafe("presspost", {
 ---
 
 <BaseLayout title="Press">
-  <PressIndexPage page={page} releases={releases} client:load />
+  <PressIndexPage page={page} releases={releases} />
 </BaseLayout>
