--- a/src/pages/privacy.astro
+++ b/src/pages/privacy.astro
@@ -7,5 +7,5 @@ const page = await getSingleSafe("privacypage");
 ---
 
 <BaseLayout title="Privacy Policy">
-  <SlicePage title="Privacy Policy" page={page} client:load />
+  <SlicePage title="Privacy Policy" page={page} />
 </BaseLayout>
