--- a/src/pages/sustainable-eco-banks/index.astro
+++ b/src/pages/sustainable-eco-banks/index.astro
@@ -9,5 +9,5 @@ const page = await getSingleSafe("ecobankspage", {
 ---
 
 <BaseLayout title="Find Green & Sustainable Banks In Your Area">
-  <SustainableBanksPage page={page} client:load />
+  <SustainableBanksPage page={page} />
 </BaseLayout>
