--- a/src/pages/take-action.astro
+++ b/src/pages/take-action.astro
@@ -9,5 +9,5 @@ const page = await getSingleSafe("takeactionpage", {
 ---
 
 <BaseLayout title="Take Action">
-  <TakeActionPage page={page} client:load />
+  <TakeActionPage page={page} />
 </BaseLayout>
