--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,5 +1,6 @@
 ---
 import "../styles/global.css";
+import { Layout } from "../components/Layout";
 
 interface Props {
   title: string;
@@ -20,61 +21,16 @@ const { title, description = "Bank.Green helps you find ethical and sustainable 
     <meta property="og:title" content={title} />
     <meta property="og:description" content={description} />
     <meta property="og:type" content="website" />
-    
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Google+Sans+Flex:opsz,wght@6..144,1..1000&family=Reddit+Sans:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <title>{title} | Bank.Green</title>
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="/">Bank.Green</a>
-        <ul>
-          <li><a href="/sustainable-eco-banks">Sustainable Banks</a></li>
-          <li><a href="/blog">Blog</a></li>
-          <li><a href="/faq">FAQ</a></li>
-          <li><a href="/contact">Contact</a></li>
-          <li><a href="/take-action">Take Action</a></li>
-          <li><a href="/impact">Switch Survey</a></li>
-          <li><a href="/donate">Donate</a></li>
-        </ul>
-      </nav>
-    </header>
-
-    <main>
+    <Layout client:load>
       <slot />
-    </main>
-
-    <footer>
-      <nav>
-        <section>
-          <ul>
-            <li><a href="/sustainable-eco-banks">Sustainable Banks</a></li>
-            <li><a href="/take-action">Take Action</a></li>
-            <li><a href="/donate">Donate</a></li>
-            <li><a href="/certification">Fossil Free Certification</a></li>
-          </ul>
-        </section>
-        <section>
-          <ul>
-            <li><a href="/blog">Blog</a></li>
-            <li><a href="/partners">Our Partners</a></li>
-            <li><a href="/press">Press</a></li>
-            <li><a href="/volunteers">Volunteering</a></li>
-          </ul>
-        </section>
-        <section>
-          <ul>
-            <li><a href="/team">Who We Are</a></li>
-            <li><a href="/contact">Contact Us</a></li>
-            <li><a href="/faq">FAQ</a></li>
-          </ul>
-        </section>
-      </nav>
-      <p>Bank.Green is a project of Empowerment Works Inc. 501(c)(3)</p>
-      <ul>
-        <li><a href="/disclaimer">Disclaimer</a></li>
-        <li><a href="/privacy">Privacy Policy</a></li>
-      </ul>
-    </footer>
+    </Layout>
   </body>
 </html>
