--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -7,5 +7,5 @@ const page = await getByUIDSafe("textonlypages", "notfound");
 ---
 
 <BaseLayout title="Page Not Found">
-  <NotFoundPage page={page} client:load />
+  <NotFoundPage page={page} />
 </BaseLayout>
