--- a/src/pages/materials.astro
+++ b/src/pages/materials.astro
@@ -7,5 +7,5 @@ const page = await getSingleSafe("materialspage");
 ---
 
 <BaseLayout title="Materials">
-  <SlicePage title="Materials" page={page} client:load />
+  <SlicePage title="Materials" page={page} />
 </BaseLayout>
