--- a/src/pages/volunteers.astro
+++ b/src/pages/volunteers.astro
@@ -7,5 +7,5 @@ const page = await getSingleSafe("volunteerspage");
 ---
 
 <BaseLayout title="Volunteering at Bank.Green">
-  <VolunteersPage page={page} client:load />
+  <VolunteersPage page={page} />
 </BaseLayout>
